--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,8 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/flash-cards.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
+
 
     {{content-for 'body-footer'}}
   </body>
