--- a/tests/index.html
+++ b/tests/index.html
@@ -18,7 +18,7 @@
     {{content-for 'test-head-footer'}}
   </head>
   <body>
-
+    <div class="background"></div>
     {{content-for 'body'}}
     {{content-for 'test-body'}}
     <script src="assets/vendor.js"></script>
